export const snapshot = {};

snapshot[`pwsh / file / find (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/file/find?sysOsPlat=linux''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`pwsh / file / sync (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/file/sync?sysOsPlat=linux''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`pwsh / pack / add (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=arch''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`pwsh / pack / find (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=arch''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`pwsh / virt / list (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/virt/list?sysOsPlat=linux''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`zsh / file / find (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/file/find?sysOsPlat=linux'\\\\''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`zsh / file / sync (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/file/sync?sysOsPlat=linux'\\\\''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`zsh / pack / add (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=arch'\\\\''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`zsh / pack / find (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=arch'\\\\''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;

snapshot[`zsh / virt / list (redirect) 1`] = `
\`nu --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/virt/list?sysOsPlat=linux'\\\\''#

nu --no-config-file -c \$"( http get --raw --redirect-mode follow \$"(\$env.REQ_URL_SH)" )"

'\`
`;
